<resources>
    <string name="app_name">Task</string>

    <!--    Generics-->
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_email_hint">email@email.com</string>
    <string name="text_password_hint">******</string>
    <string name="text_register_account">Criar conta</string>
    <string name="error_generic">Ocorreu um erro, por favor, tente novamente mais tarde</string>
    <string name="text_task_update_success">Tarefa atualizada com sucesso.</string>
    <string name="text_button_confirm">Confirmar</string>
    <string name="text_task_delete_success">Tarefa removida com sucesso.</string>
    <string name="text_loading_tasks_fragments">Carregando tarefas...</string>

    <!--    Login Fragment-->
    <string name="text_recover_login_fragment">Recuperar conta</string>
    <string name="text_btn_login_fragment">Login</string>
    <string name="text_password_empty_login_fragment">Informe sua senha</string>
    <string name="text_email_empty_login_fragment">Informe seu e-mail</string>

    <!--    Recover Account Fragment-->
    <string name="text_btn_recover_account_fragment">Enviar</string>
    <string name="text_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_email_empty_recover_account_fragment">Informe seu e-mail</string>
    <string name="text_email_send_succes_recover_account_fragment">Pronto, acabamos de enviar um link para seu e-mail.</string>

    <!--    Register Fragment-->
    <string name="text_email_empty_register_fragment">Informe seu e-mail</string>
    <string name="text_password_empty_register_fragment">Informe sua senha</string>

    <!--    Errors Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta econtrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>

    <!--    Form Task Fragment-->
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="text_description_form_task_fragment">Descrição</string>
    <string name="text_status_form_task_fragment">Status</string>
    <string name="text_btn_save_task_form_task_fragment">Salvar</string>
    <string name="text_description_hint_form_task_fragment">Criar nova tela de login</string>
    <string name="text_description_empty_form_task_fragment">Informe uma descrição para a tarefa.</string>
    <string name="text_save_task_success_form_task_fragment">Tarefa salva com sucesso.</string>
    <string name="text_update_task_success_form_task_fragment">Tarefa atualizada com sucesso.</string>
    <string name="text_error_save_task_form_task_fragment">Erro ao salvar a tarefa.</string>
    <string name="text_editing_task_form_task_fragment">Editando tarefa</string>

    <!--    Status Task-->
    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feito</string>

    <!--    Todo Fragment-->
    <string name="text_task_list_empty_todo_fragment">Nenhuma tarefa cadastrada.</string>
    <string name="text_message_delete_task_todo_fragment">Deseja realmente remover esta tarefa ?</string>

    <!--    Doing Fragment-->
    <string name="text_task_list_empty_doing_fragment">Nenhuma tarefa cadastrada.</string>
    <string name="text_message_delete_task_doing_fragment">Deseja realmente remover esta tarefa ?</string>

    <!--    Done Fragment-->
    <string name="text_task_list_empty_done_fragment">Nenhuma tarefa cadastrada.</string>
    <string name="text_message_delete_task_done_fragment">Deseja realmente remover esta tarefa ?</string>

    <!--    Bottom Sheet-->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>



</resources>